# slackbot

./: .gitignore  README.md  bot.cfg.example  slackbot.cabal  stack.yaml
src/: Main.hs
src/SlackBot/: Bot.hs  Command.hs  Config.hs  Types.hs
src/SlackBot/Commands/: Sonaatti.hs
