name:                slackbot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/Lepovirta/slackbot#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable slackbot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    SlackBot.Bot,
    SlackBot.Command,
    SlackBot.Types,
    SlackBot.Commands.Sonaatti
  default-language:    Haskell2010
  build-depends:
    base         >= 4.7 && < 5,
    containers   >= 0.5,
    configurator >= 0.3,
    text         >= 1.2,
    transformers >= 0.4,
    slack-api    >= 0.5,
    SonaattiMenu >= 0.1
